# yukari-exvoice

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  build.gradle  build_config.rb
.github/workflows/: build.yml
gradle/wrapper/: gradle-wrapper.properties
mruby/: Rakefile  build_config.rb
mruby/include/: mrbconf.h
mruby/tasks/toolchains/: android.rake
src/main/assets/: avoid.rb  bootstrap.rb  javaerror.rb
src/main/assets/plugin/: 20-chronus.rb  39-yukamiku.rb
src/main/assets/yukamiku/: compatmodel.rb  configloader.rb  gtk.rb  gui.rb  message.rb  mikuenv.rb  user.rb  userconfig.rb
src/main/java/info/shibafu528/yukari/exvoice/: ConfigLoader.java  Disposable.java  MRuby.java  MRubyObject.java  MRubyObjectHandler.java  MRubyPointer.java  ProcWrapper.java
src/main/java/info/shibafu528/yukari/exvoice/converter/: StatusConverter.java
src/main/java/info/shibafu528/yukari/exvoice/diva/: Message.java  Model.java  ModelFactory.java
src/main/java/info/shibafu528/yukari/exvoice/miquire/: Miquire.java  MiquireResult.java
src/main/java/info/shibafu528/yukari/exvoice/model/: Message.java  MessageMixin.java  User.java
src/main/java/info/shibafu528/yukari/exvoice/pluggaloid/: AnnotatedEventFilter.java  AnnotatedEventListener.java  AnnotatedSpellListener.java  Event.java  Filter.java  FilterException.java  Keyword.java  Plugin.java  RestKeywords.java  Spell.java
src/main/jni/: ConfigLoader.c  JNIGlobalRef.h  JNILocalRef.h  JNIMethodInfo.h  JNIObject.cpp  JNIObject.h  MRuby.c  MRuby.h  Plugin.c  common.c  common.h  converter.c  converter.h  exvoice_ConfigLoader.c  exvoice_ConfigLoader.h  generator.h  jni_ConfigLoader.c  jni_MRuby.c  jni_MRuby.h  jni_MRubyObjectHandler.c  jni_Plugin.c  jni_ProcWrapper.c  jni_converter.c  jni_diva_ModelFactory.c  jni_generator.h  jni_miquire_Miquire.c  jni_pluggaloid_Plugin.c  mrb_Android.c  mrb_Android.h  mrb_Android_AssetDir.c  mrb_Android_AssetDir.h  mrb_Android_Log.h  mrb_ConfigLoader.c  mrb_ConfigLoader.h  mrb_JavaThrowable.c  mrb_JavaThrowable.h
src/main/resources/info.shibafu528.yukari.exvoice/: javaToRubyMethodDict.json
